fix, only z-index on profile and popout

--- a/src/plugins/usrbg/index.css
+++ b/src/plugins/usrbg/index.css
@@ -1,4 +1,5 @@
-[class*="bannerPremium"] {
+[class*=userProfile] [class*="bannerPremium"],
+[class*=userPopout] [class*="bannerPremium"] {
     background: center / cover no-repeat;
     position: relative;
     z-index: -1;
